@@ -4,7 +4,7 @@ App::MCP::Worker - Remotely executed worker process
 
 # Version
 
-This documents version v0.2.$Rev: 20 $ of [App::MCP::Worker](https://metacpan.org/pod/App::MCP::Worker)
+This documents version v0.2.$Rev: 22 $ of [App::MCP::Worker](https://metacpan.org/pod/App::MCP::Worker)
 
 # Synopsis
 
@@ -26,7 +26,6 @@ Defines the following attributes;
 - `runid`
 - `servers`
 - `token`
-- `user_name`
 - `uri_template`
 
 # Subroutines/Methods
